; ModuleID = '/home/carl/AnghaBench/mongoose/src/common/platforms/lwip/extr_mg_lwip_ev_mgr.c_mg_lwip_if_remove_conn.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/common/platforms/lwip/extr_mg_lwip_ev_mgr.c_mg_lwip_if_remove_conn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }
%struct.mg_ev_mgr_lwip_data = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, %struct.mg_connection* }

@MG_SIG_QUEUE_LEN = common dso_local global i32 0, align 4
@MG_SIG_TOMBSTONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mg_lwip_if_remove_conn(%struct.mg_connection* %0) #0 {
  %2 = alloca %struct.mg_connection*, align 8
  %3 = alloca %struct.mg_ev_mgr_lwip_data*, align 8
  %4 = alloca i32, align 4
  store %struct.mg_connection* %0, %struct.mg_connection** %2, align 8
  %5 = load %struct.mg_connection*, %struct.mg_connection** %2, align 8
  %6 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %5, i32 0, i32 0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to %struct.mg_ev_mgr_lwip_data*
  store %struct.mg_ev_mgr_lwip_data* %10, %struct.mg_ev_mgr_lwip_data** %3, align 8
  store i32 0, i32* %4, align 4
  br label %11

11:                                               ; preds = %36, %1
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @MG_SIG_QUEUE_LEN, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %39

15:                                               ; preds = %11
  %16 = load %struct.mg_ev_mgr_lwip_data*, %struct.mg_ev_mgr_lwip_data** %3, align 8
  %17 = getelementptr inbounds %struct.mg_ev_mgr_lwip_data, %struct.mg_ev_mgr_lwip_data* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  %23 = load %struct.mg_connection*, %struct.mg_connection** %22, align 8
  %24 = load %struct.mg_connection*, %struct.mg_connection** %2, align 8
  %25 = icmp eq %struct.mg_connection* %23, %24
  br i1 %25, label %26, label %35

26:                                               ; preds = %15
  %27 = load i32, i32* @MG_SIG_TOMBSTONE, align 4
  %28 = load %struct.mg_ev_mgr_lwip_data*, %struct.mg_ev_mgr_lwip_data** %3, align 8
  %29 = getelementptr inbounds %struct.mg_ev_mgr_lwip_data, %struct.mg_ev_mgr_lwip_data* %28, i32 0, i32 0
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %29, align 8
  %31 = load i32, i32* %4, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  store i32 %27, i32* %34, align 8
  br label %35

35:                                               ; preds = %26, %15
  br label %36

36:                                               ; preds = %35
  %37 = load i32, i32* %4, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %4, align 4
  br label %11

39:                                               ; preds = %11
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
